--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -7,6 +7,7 @@
     tools:context=".TimelineActivity">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvTweets"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="8dp"
