--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -9,6 +9,7 @@
         android:id="@+id/ivProfilePic"
         android:layout_width="73dp"
         android:layout_height="73dp"
+        android:layout_marginStart="3dp"
         android:layout_marginTop="3dp"
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,7 +31,7 @@
     <TextView
         android:id="@+id/tvBody"
         android:layout_width="0dp"
-        android:layout_height="46dp"
+        android:layout_height="0dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="3dp"
